--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,9 @@
   "author": "[your name]",
   "name": "[your readable mod name]",
   "uniqueName": "[your name].[your unique mod ID]",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "owmlVersion": "2.1.0",
-  "dependencies": [ "xen.NewHorizons" ]
+  "dependencies": [
+    "xen.NewHorizons"
+  ]
 }
